# cognios

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
sidecar/: .gitignore  pyproject.toml
sidecar/packaging/: build_macos_arm64.sh  build_macos_installer.sh  pyinstaller_entry.py  smoke_test_macos_sidecar.py
sidecar/search_sidecar/: __init__.py  __main__.py  app.py  auth.py  lifecycle.py  observability.py  runtime_file.py  settings.py
sidecar/search_sidecar/chat/: __init__.py  agent_runtime.py  clustering.py  factory.py  litellm_adapter.py  note_merge.py  ollama.py  openai_compat.py  orchestrator.py  prompting.py  provider.py  retrieval.py  sources.py  tools.py  types.py
sidecar/search_sidecar/embeddings/: __init__.py  factory.py  gte.py  openai_compat.py  reembed.py
sidecar/search_sidecar/extract/: __init__.py  cloud_vision.py  factory.py  local_advanced_ocr.py  local_advanced_ocr_subprocess.py  local_advanced_ocr_worker.py  local_ocr.py  types.py
sidecar/search_sidecar/index/: __init__.py  chunking.py  content.py  dispatch.py  embedder.py  extract_artifacts.py  job.py  metadata.py  migrations.py  queue.py  runner.py
sidecar/search_sidecar/index/processors/: __init__.py  enhancement.py  image.py  pdf.py  text.py  url_cache.py
sidecar/search_sidecar/models/: __init__.py  manager.py  manifest.py
sidecar/search_sidecar/providers/: __init__.py  keychain.py  presets.py
sidecar/search_sidecar/realtime_voice/: __init__.py  embedded.py  runtime.py
sidecar/search_sidecar/rerank/: __init__.py  factory.py  gte_reranker.py
sidecar/search_sidecar/retrieval/: __init__.py  filters.py  search.py
sidecar/search_sidecar/routes/: chat.py  events.py  index.py  models.py  observability.py  realtime_voice.py  search.py  settings.py  topic_memory.py  voice_notes.py
sidecar/search_sidecar/scripts/: __init__.py  pin_manifest.py
sidecar/search_sidecar/storage/: __init__.py  lancedb_store.py  migrations.py
sidecar/search_sidecar/topic_memory/: __init__.py  proposer.py
sidecar/search_sidecar/voice_notes/: __init__.py  summarizer.py  transcriber.py
sidecar/search_sidecar/web_search/: __init__.py  brave.py  factory.py  fetch.py  tavily.py  types.py
sidecar/spike/: .gitignore  README.md  build_spike.sh  hello.py  pyproject.toml
sidecar/tests/: conftest.py  test_auth.py  test_chat_agentic_runtime.py  test_chat_clustering.py  test_chat_litellm_adapter.py  test_chat_note_merge.py  test_chat_ollama.py  test_chat_openai_compat.py  test_chat_provider_factory.py  test_chat_routes.py  test_chunking.py  test_embedder_protocol.py  test_embeddings_factory.py  test_extract_cloud_vision.py  test_extract_factory.py  test_extract_local_advanced_ocr.py  test_extract_local_advanced_ocr_subprocess.py  test_extract_local_ocr.py  test_gte_embedder.py  test_healthz.py  test_index_processors_image.py  test_index_processors_pdf.py  test_index_processors_text.py  test_index_processors_url_cache.py  test_index_queue.py  test_index_routes.py  test_index_runner.py  test_index_snapshot.py  test_lancedb_store.py  test_lifecycle.py  test_manifest.py  test_model_manager.py  test_model_routes.py  test_needs_restart.py  test_observability.py  test_openai_compat_embedder.py  test_packaging_script.py  test_pin_manifest.py  test_providers_keychain.py  test_providers_presets.py  (+18 more)
src/: main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_mounts.sql  0003_urls.sql  0004_node_metadata.sql  0005_chat_sessions.sql  0006_session_memory.sql  0007_voice_notes.sql  0008_voice_note_transcripts.sql  0009_node_statuses.sql  0010_background_tasks.sql  0011_statistics.sql  0012_topic_memory.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  files.rs  mod.rs  mounts.rs  node_status.rs  nodes.rs  notes.rs  realtime_voice.rs  search.rs  search_settings.rs  secrets.rs  thumbnails.rs  topic_memory.rs  urls.rs  voice_notes.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/chat/: mod.rs
src-tauri/src/domain/node_status/: mod.rs
src-tauri/src/domain/topic_memory/: mod.rs
src-tauri/src/domain/vfs/: node.rs  state.rs
src-tauri/src/domain/voice_note/: mod.rs
src-tauri/src/infrastructure/db/: background_task_repository.rs  chat_repository.rs  connection.rs  migrations.rs  mod.rs  mount_repository.rs  node_repository.rs  node_status_repository.rs  statistics_repository.rs  topic_memory_repository.rs  url_repository.rs
src-tauri/src/infrastructure/fs/: mod.rs  path_mapper.rs
src-tauri/src/services/: mod.rs  node_status.rs  secure_storage.rs
src-tauri/src/services/chat/: live_note.rs  mod.rs  session_memory.rs
src-tauri/src/services/files/: mod.rs  read_file_content.rs
src-tauri/src/services/mounts/: create_mount.rs  ignore_config.rs  mod.rs  obsidian.rs  reconcile.rs  scanner.rs  watcher.rs
src-tauri/src/services/mutations/: create_folder.rs  delete_node.rs  mod.rs  reindex_node.rs  rename_node.rs
src-tauri/src/services/notes/: create_note.rs  get_note_content.rs  mod.rs  save_note_content.rs
src-tauri/src/services/realtime_voice/: mod.rs  vllm.rs
src-tauri/src/services/search/: advanced_ocr_watcher.rs  client.rs  forwarder.rs  index_state_sync.rs  mod.rs  python_dev_watcher.rs  runtime_file.rs  safe_lifecycle.rs  search_indexer.rs  settings_fallback.rs  supervisor.rs
src-tauri/src/services/topic_memory/: mod.rs
src-tauri/src/services/url_indexing/: cache.rs  mod.rs  pipeline.rs  queue.rs  registry.rs
src-tauri/src/services/voice_notes/: mod.rs  native_audio.rs
src-tauri/tests/: bootstrap_smoke.rs  chat_live_note.rs  chat_sessions.rs  explorer_snapshot_metadata.rs  file_preview_commands.rs  image_thumbnails.rs  mount_live_sync.rs  mount_restart_reconciliation.rs  mount_sync.rs  mounted_path_mutations.rs  node_mutations.rs  node_statuses.rs  notes_commands.rs  url_indexing.rs  url_restart_recovery.rs  vfs_domain_invariants.rs  vfs_events.rs  vfs_persistence.rs  voice_notes.rs
(+187 files in other folders)
