[project]
name = "search-sidecar"
version = "0.0.1"
description = "Cognios search sidecar — FastAPI HTTP server for hybrid retrieval"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "httpx==0.28.1",
  "lancedb==0.30.2",
  "pyarrow==18.1.0",
  "selectolax==0.3.27",
]

# The semantic-search ONNX path is opt-in: dev installs default to the
# StubEmbedder (zero-vector) so test runs stay snappy. Release builds
# (Unit 12 PyInstaller) install ``--extra embedding`` to pull the
# transformers tokenizer + optimum.onnxruntime runtime that
# ``GteEmbedder`` needs. The orchestrator factory falls back to
# ``StubEmbedder`` automatically when these aren't importable.
[project.optional-dependencies]
embedding = [
  "optimum[onnxruntime]>=1.24,<2.0",
  "transformers>=4.45,<5.0",
]

[project.scripts]
search-sidecar = "search_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_sidecar"]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
