[project]
name = "search-sidecar"
version = "0.0.1"
description = "Cognios search sidecar — FastAPI HTTP server for hybrid retrieval"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "httpx==0.28.1",
  "lancedb==0.30.2",
  "pyarrow==18.1.0",
  "pymupdf>=1.24,<2.0",
  "selectolax==0.3.27",
  # Pydantic v2 — declared explicitly because settings.py uses
  # ``model_validate_json`` / ``model_dump`` which are v2-only. FastAPI
  # 0.115 already pulls v2 transitively, but we don't want a future
  # FastAPI floor change to silently drop us back to v1.
  "pydantic>=2.0,<3.0",
  # OS keychain bridge for cloud provider API keys. The Rust supervisor
  # uses the `keyring` crate to write under service name
  # ``cognios-search``; this reads from the same slot. macOS Keychain
  # works out of the box; Linux requires a Secret Service daemon
  # (gnome-keyring / KWallet / KeePassXC) — the cloud embedder degrades
  # to a clear error if the backend is unavailable.
  "keyring>=24.0,<26.0",
  # Local OCR (PaddleOCR ONNX). image-ocr is mandatory in v1 and
  # binds to ``local-paddleocr`` by default, so the dep travels with
  # the main package — the model files (~80MB) ship inside the
  # rapidocr-onnxruntime wheel itself, no separate download. Pillow
  # is its image-decoding companion.
  "rapidocr-onnxruntime>=1.3,<2.0",
  "Pillow>=10.0,<12.0",
]

# The semantic-search ONNX path is opt-in: dev installs default to the
# StubEmbedder (zero-vector) so test runs stay snappy. Release builds
# (Unit 12 PyInstaller) install ``--extra embedding`` to pull the
# transformers tokenizer + optimum.onnxruntime runtime that
# ``GteEmbedder`` needs. The orchestrator factory falls back to
# ``StubEmbedder`` automatically when these aren't importable.
[project.optional-dependencies]
embedding = [
  "optimum[onnxruntime]>=1.24,<2.0",
  "transformers>=4.45,<5.0",
]
# Layout-aware OCR (PP-StructureV3). Genuinely heavy — paddleocr +
# paddlepaddle pull ~600 MB of native deps and the 13-stage model
# bundle adds another ~600 MB on first download. Off by default; the
# Settings UI surfaces an install hint when the user enables advanced
# OCR with a local provider but the extra isn't present.
advanced-ocr = [
  "paddleocr>=3.0,<4.0",
  "paddlepaddle>=3.0,<4.0",
]

[project.scripts]
search-sidecar = "search_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_sidecar"]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
