[project]
name = "search-sidecar"
version = "0.0.1"
description = "Cognios search sidecar — FastAPI HTTP server for hybrid retrieval"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "httpx==0.28.1",
  "lancedb==0.30.2",
  "pyarrow==18.1.0",
  "pymupdf>=1.24,<2.0",
  "selectolax==0.3.27",
  "markdown-it-py>=3.0,<5.0",
  # Pydantic v2 — declared explicitly because settings.py uses
  # ``model_validate_json`` / ``model_dump`` which are v2-only. FastAPI
  # 0.115 already pulls v2 transitively, but we don't want a future
  # FastAPI floor change to silently drop us back to v1.
  "pydantic>=2.0,<3.0",
  # Local OCR (PaddleOCR ONNX). image-ocr is mandatory in v1 and
  # binds to ``local-paddleocr`` by default, so the dep travels with
  # the main package — the model files (~80MB) ship inside the
  # rapidocr-onnxruntime wheel itself, no separate download. Pillow
  # is its image-decoding companion.
  "rapidocr-onnxruntime>=1.3,<2.0",
  "Pillow>=10.0,<12.0",
  # Required local Voice Notes transcription runtime. Model weights still
  # download through Cognios' model manager; this package provides the
  # Qwen3-ASR loader/inference code used by the sidecar transcription route.
  "qwen-asr>=0.0.6,<0.1.0",
  "pydantic-ai-slim[openai]>=1.0,<2.0",
  "trafilatura>=2.0,<3.0",
]

# The semantic-search ONNX path and the layout-aware advanced-OCR
# pipeline both ship as optional extras so callers who pip-install
# the sidecar can opt in. Both factories degrade gracefully when
# the deps aren't importable: the embedder falls back to
# ``StubEmbedder`` (zero-vector) and the advanced-OCR factory
# returns ``None`` (dispatcher routes to basic OCR instead).
#
# Dev installs DO want both extras — the configured features need
# the real models to behave like production. We pull them in by
# default via ``tool.uv.default-extras`` below; the public extras
# surface stays available for any consumer who wants a slim install
# (``pip install search-sidecar`` keeps both paths stubbed).
[project.optional-dependencies]
embedding = [
  "onnxruntime>=1.20,<2.0",
  # qwen-asr pins transformers==4.57.6; optimum 1.x caps transformers below
  # that range, so the ONNX reranker/embedding stack needs optimum 2.x.
  "optimum[onnxruntime]>=2.0,<3.0",
  "transformers>=4.45,<5.0",
]
# Layout-aware OCR (PP-StructureV3). Genuinely heavy — paddleocr +
# paddlepaddle pull ~600 MB of native deps and the 13-stage model
# bundle adds another ~600 MB on first download. The factory skips
# the local pipeline silently when these aren't importable.
#
# ``paddlex[ocr]`` is required: paddleocr 3.x delegates pipeline
# construction to paddlex, and PP-StructureV3 specifically gates on
# the ``[ocr]`` extra (pyclipper, shapely, chinese_calendar,
# pypdfium2, imagesize, ftfy, premailer, ...). Without it the
# pipeline init throws a generic ``DependencyError`` that paddleocr
# wraps in an unhelpful "refer to the installation docs" message.
advanced-ocr = [
  "paddleocr>=3.0,<4.0",
  "paddlepaddle>=3.0,<4.0",
  "paddlex[ocr]>=3.0,<4.0",
]

[project.scripts]
search-sidecar = "search_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_sidecar"]

[dependency-groups]
# Bare ``uv sync`` installs the ``dev`` group by default and the
# group self-references the project with both extras enabled, so
# devs get the full embedding + advanced-OCR runtime without
# remembering ``--extra`` flags. Slim installs (no extras) are
# still possible via ``uv sync --no-group dev`` or via plain
# ``pip install search-sidecar`` for downstream consumers.
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "search-sidecar[embedding,advanced-ocr]",
]

[tool.uv.sources]
# Self-reference: tells uv the ``search-sidecar`` package referenced
# above lives at the project root rather than on PyPI. Required
# for the dep-group self-reference pattern to resolve.
search-sidecar = { workspace = true }

[tool.uv.workspace]
members = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
