[package]
name = "cognios"
version = "0.1.0"
description = "CogniOS Milestone 1 desktop app"
authors = ["Codex"]
edition = "2021"

[lib]
name = "cognios_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
ignore = "0.4.25"
notify = "8.2.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
log = "0.4"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
